# Codemedic

./: .clang-format  .clang-tidy  .codemedic.yaml  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  License  README.md  docker-compose.yml
.github/workflows/: build.yml  release.yml
completions/: codemedic.bash  codemedic.zsh
include/: batch_processor.h  compiler_runner.h  config_loader.h  context_extractor.h  error_parser.h  git_integration.h  llm_client.h  patch_applier.h  root_cause_analyzer.h  session_logger.h  terminal_ui.h  types.h
scripts/: build.sh  install.sh
src/: batch_processor.cpp  compiler_runner.cpp  config_loader.cpp  context_extractor.cpp  error_parser.cpp  git_integration.cpp  llm_client.cpp  main.cpp  patch_applier.cpp  root_cause_analyzer.cpp  session_logger.cpp  terminal_ui.cpp
tests/: cascade_test.cpp  cascade_test.cpp.rej  demo_bugs.cpp  demo_c_bugs.c
